gsccFF/test_errors/driverlog-gs-rand-2.txt
E:\projects\betterFF\gsccFF\src\main\java\javaff\JavaFF.java:523: error: cannot find symbol
		currentProblem.setGoal(goal);
		^
  symbol:   variable currentProblem
  location: class JavaFF
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 8s
